# Base

./: CMakeLists.txt  README.md  clang.sh  main.cpp  sonar-project.properties
.github/workflows/: build-container.yml  build-project.yml
docker/: shared.dockerfile  static.dockerfile
scripts/: build-and-test.sh  build.sh  check-format.sh
src/include/: about.hpp
src/include/controllers/: operations_controller.hpp
src/objects/: about.cpp
src/objects/controllers/: operations_controller.cxx
tests/: test_about.cc  test_api.cc
